<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_rushydro_logo"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <RadioGroup
        android:id="@+id/radio_group_doc_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_goods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/inventory_of_goods"/>
        <RadioButton
            android:id="@+id/radio_assets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fixed_asset_inventory"/>
    </RadioGroup>

    <EditText
        android:id="@+id/edit_doc_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/document_number"/>
    
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_search_and_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_and_load"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>