<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DocFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:contentDescription="@string/main_list_content_desc"
        android:id="@+id/list_recycler"
        tools:listitem="@layout/list_recyclerview_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"

        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        app:layout_anchor="@id/send"
        android:translationY="-16dp"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/scan_barcode" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        app:srcCompat="@android:drawable/ic_menu_send"
        android:contentDescription="@string/send_info" />




</androidx.coordinatorlayout.widget.CoordinatorLayout>